# qml_enchat

./: .gitmodules  CMakeLists.txt  ChatContentView.qml  ChatHistoryListView.qml  FriendListView.qml  Main.qml  appconfig.cpp  appconfig.h  chatengine.cpp  chatengine.h  chathistory.cpp  chathistory.h  friendlistmodel.cpp  friendlistmodel.h  main.cpp  vcpkg.json
